k8s/cluster1-eks/gateway-api/gateway.yaml
################################################################################
# GatewayClass — tells K8s to use Istio as the gateway controller
################################################################################
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller
---
################################################################################
# Gateway — creates an Istio IngressGateway with an AWS NLB (LoadBalancer)
################################################################################
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: receiver-gateway
  namespace: default
  annotations:
    # AWS NLB is cheaper than ALB for simple HTTP
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
